cartopy/docs/v0.16/_sources/gallery/utm_all_zones.rst.txt


.. _sphx_glr_gallery_utm_all_zones.py:


Displaying all 60 zones of the UTM projection
---------------------------------------------

This example displays all 60 zones of the Universal Transverse Mercator
projection next to each other in a figure.

First we create a figure with 60 subplots in one row.
Next we set the projection of each axis in the figure to a specific UTM zone.
Then we add coastlines, gridlines and the number of the zone.
Finally we add a supertitle and display the figure.




.. image:: /gallery/images/sphx_glr_utm_all_zones_001.png
    :align: center





.. code-block:: python


    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt


    def main():
        # Create a list of integers from 1 - 60
        zones = range(1, 61)

        # Create a figure
        fig = plt.figure(figsize=(18, 6))

        # Loop through each zone in the list
        for zone in zones:

            # Add GeoAxes object with specific UTM zone projection to the figure
            ax = fig.add_subplot(1, len(zones), zone,
                                 projection=ccrs.UTM(zone=zone,
                                                     southern_hemisphere=True))

            # Add coastlines, gridlines and zone number for the subplot
            ax.coastlines(resolution='110m')
            ax.gridlines()
            ax.set_title(zone)

        # Add a supertitle for the figure
        fig.suptitle("UTM Projection - Zones")

        # Display the figure
        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  3.001 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: utm_all_zones.py <utm_all_zones.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: utm_all_zones.ipynb <utm_all_zones.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
